src/test/ui/issues/issue-72690.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:7:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:11:9
   |
LL |     |x| String::from("x".as_ref());
   |         ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed for `&T`
  --> $DIR/issue-72690.rs:15:17
   |
LL |     let _ = "x".as_ref();
   |                 ^^^^^^ cannot infer type for type parameter `T` declared on the trait `AsRef`
   |
   = note: cannot satisfy `str: AsRef<_>`
help: consider giving this binding the explicit type `&T`, where the type parameter `T` is specified
   |
LL |     let _: str = "x".as_ref();
   |          ^^^^^

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:19:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:25:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:33:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:41:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:47:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:55:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for reference `&_`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0283`.
